Added a death counter through a custom server side script
Server side script can be found at https://gist.github.com/schoentoon/6176047

Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/overviewer_core/data/web_assets/overviewer.css
+++ b/overviewer_core/data/web_assets/overviewer.css
@@ -97,7 +97,7 @@ body {
 }
 
 
-#link, #coordsDiv, #progressDiv {
+#link, #coordsDiv, #progressDiv, #deathCounterDiv {
     background-color: #fff; /* fallback */
     background-color: rgba(255,255,255,0.55);
     border: 1px solid rgb(0, 0, 0);
